platform/src/objects/Content_Delivery_Platform__c.object
<CustomObject>
    <fields>
        <fullName>CSG_1__c</fullName>
        <label>CSG 1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSG_2__c</fullName>
        <label>CSG 2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSG_3__c</fullName>
        <label>CSG 3</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinese_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing list of stores with Chinese population.</description>
        <label>Chinese Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Package__c</fullName>
        <label>Commercial Package</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Pack &amp; News Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT120 &amp; News Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT120 Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT200 and News &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT250 and News &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Essentials (retired)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Preferred (retired)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Ultimate (retired)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complex_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Customer_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DS Customer Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Directory_Wayfinding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DS Directory Wayfinding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_WFCC_Espanol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DS WFCC Espanol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_WF_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Digital Signage Network WF Internal</description>
        <label>DS WF Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Welcome_Wall_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Welcome Wall - Digital Signage.</description>
        <label>DS Welcome Wall Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equip_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equip Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hispanic_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing list of stores with Hispanic population.</description>
        <label>Hispanic Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Service_Install_Date__c</fullName>
        <description>Date refers to when Service to the site initially started - this is to show the length of service to site, not changes.</description>
        <inlineHelpText>Date refers to when Service to the site initially started - this is to show the length of service to site, not changes.</inlineHelpText>
        <label>Initial Service Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Head_End_Channels__c</fullName>
        <label>List Head End Channels</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOH_DVD_Loop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOH DVD Loop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOH_Multi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOH Multi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Updates_To__c</fullName>
        <label>Mail Updates To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Music_DVD_Loop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Music DVD Loop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Music__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Music</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Receivers__c</fullName>
        <label>Number of Receivers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_of_Scope_Status__c</fullName>
        <description>Used only if Out of Scope is selected in the Status Field.</description>
        <inlineHelpText>Used only if Out of Scope is selected in the Status Field.</inlineHelpText>
        <label>Out of Scope Status</label>
        <picklist>
            <picklistValues>
                <fullName>Excessive Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Denial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Line of Sight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site refused Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoning Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Employee at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Install per CPG PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Receiver_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC / Receiver Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receivers_On_Site__c</fullName>
        <formula>Site__r.Dish_Network_Receivers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receivers On-Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STM_Enhanced_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STM/Enhanced ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screenfeed_LGBT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenfeed LGBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screenfeed_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenfeed Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screenfeed_National__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenfeed National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screenfeed_Spanish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenfeed Spanish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicing_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Vendor</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Content Delivery Platforms</relationshipLabel>
        <relationshipName>Content_Delivery_Platforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Delivery Platforms</relationshipLabel>
        <relationshipName>Content_Delivery_Platforms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered / Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stocks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stocks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sustainability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LEED certified information.</description>
        <label>Sustainability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_Monitor_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV/Monitor Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WFCC_DVD_Loop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WFCC DVD Loop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WFCC_Espanol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WFCC (Espanol)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WFCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WFCC</label>
        <type>Checkbox</type>
    </fields>
    <label>Content Delivery Platform</label>
    <nameField>
        <label>Content Delivery Platform</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Delivery Platforms</pluralLabel>
    <recordTypes>
        <fullName>Digital_Signage</fullName>
        <active>true</active>
        <label>Digital Signage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media_Services</fullName>
        <active>true</active>
        <label>Media Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Satellite</fullName>
        <active>true</active>
        <label>Satellite</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>